@@ -10,7 +10,7 @@ lib/Crypt/Nettle/RSA.pm
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
-META.yml			Module meta-data (added by MakeMaker)
+META.json
 README
 t/01-hash.t
 t/02-hmac.t
